# ralph-orchestrator

./: Cargo.toml  FUNDING.md  Justfile  README.md  devenv.nix  package-lock.json  package.json  ralph.pi.yml  ralph.qa.yml  ralph.reviewer.yml  ralph.yml  run_test.sh  ux-findings.md
.claude/skills/review-pr/: SKILL.md
.claude/skills/tui-debug-in-pane/: SKILL.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  lint.yml  release.yml
.hooks/: pre-commit
.ralph/agent/: decisions.md
.ralph/tasks/: fix-default-publishes-cascade.code-task.md
crates/ralph-adapters/: Cargo.toml
crates/ralph-adapters/src/: acp_executor.rs  auto_detect.rs  cli_backend.rs  json_rpc_handler.rs  lib.rs  pi_stream.rs  pty_executor.rs  stream_handler.rs
crates/ralph-adapters/tests/: acp_executor_integration.rs  acp_process_cleanup.rs  pty_executor_integration.rs
crates/ralph-api/: Cargo.toml  README.md
crates/ralph-api/data/: rpc-v1-events.json  rpc-v1-schema.json
crates/ralph-api/src/: auth.rs  collection_domain.rs  config.rs  config_domain.rs  errors.rs  idempotency.rs  lib.rs  loop_domain.rs  loop_side_effects.rs  loop_support.rs  main.rs  mcp.rs  planning_domain.rs  preset_domain.rs  protocol.rs  runtime.rs  task_domain.rs  transport.rs
crates/ralph-api/src/collection_domain/: yaml.rs
crates/ralph-api/src/runtime/: dispatch.rs
crates/ralph-api/src/stream_domain/: filters.rs  mod.rs  rpc_side_effects.rs
crates/ralph-api/src/task_domain/: storage.rs
crates/ralph-api/tests/: rpc_v1_bootstrap.rs  rpc_v1_loop_parity_regressions.rs  rpc_v1_planning_config_preset_collection.rs  rpc_v1_streaming.rs  rpc_v1_task_loop.rs  rpc_v1_uncovered.rs
crates/ralph-bench/src/: main.rs
crates/ralph-cli/: Cargo.toml
crates/ralph-cli/presets/: README.md  pdd-to-code-assist.yml
crates/ralph-cli/src/: backend_support.rs  bot.rs  display.rs  doctor.rs  hats.rs  hooks.rs  init.rs  interact.rs  loop_runner.rs  loops.rs  main.rs  mcp.rs  memory.rs  preflight.rs  presets.rs  rpc_stdin.rs  sop_runner.rs  task_cli.rs  web.rs
crates/ralph-cli/tests/: integration_clean.rs  integration_config_precedence.rs  integration_run_presets.rs  integration_subprocess_tui_lock.rs  integration_web.rs
crates/ralph-core/: Cargo.toml
crates/ralph-core/src/: config.rs  event_reader.rs  hat_registry.rs  hatless_ralph.rs  lib.rs  loop_registry.rs  merge_queue.rs  preflight.rs  summary_writer.rs  workspace.rs
crates/ralph-core/src/diagnostics/: hook_runs.rs  log_rotation.rs  mod.rs
crates/ralph-core/src/event_loop/: loop_state.rs  mod.rs  tests.rs
crates/ralph-core/src/hooks/: engine.rs  executor.rs  mod.rs
crates/ralph-core/tests/: hooks_config_boundary.rs  rpc_v1_contract_conformance.rs  smoke_runner.rs
crates/ralph-core/tests/fixtures/kiro-acp/: README.md  basic_kiro_acp_session.jsonl  kiro_acp_tool_use.jsonl
crates/ralph-core/tests/fixtures/rpc-v1/errors/invalid/: missing-retryable.json  unknown-error-code.json
crates/ralph-core/tests/fixtures/rpc-v1/errors/valid/: task-not-found.json  unauthorized-token.json
crates/ralph-core/tests/fixtures/rpc-v1/events/invalid/: missing-cursor.json  task-log-line-missing-source.json  unknown-topic.json
crates/ralph-core/tests/fixtures/rpc-v1/events/valid/: loop-event.json  loop-log-line.json  loop-status-resume.json  stream-keepalive.json  task-log-line.json
crates/ralph-core/tests/fixtures/rpc-v1/requests/invalid/: loop-start-project-id.json  missing-api-version.json  mutating-without-idempotency.json  task-create-bad-priority.json  unknown-method.json
crates/ralph-core/tests/fixtures/rpc-v1/requests/valid/: loop-merge.json  loop-start.json  stream-subscribe.json  task-create.json  task-list.json
crates/ralph-core/tests/fixtures/rpc-v1/responses/invalid/: missing-id.json  task-list-wrong-result-shape.json  unknown-method.json
crates/ralph-core/tests/fixtures/rpc-v1/responses/valid/: loop-merge-response.json  loop-start-response.json  stream-subscribe-response.json  task-list-response.json
crates/ralph-e2e/features/hooks/: TRACEABILITY.md  error-dispositions.feature  executor-safeguards.feature  metadata-mutation.feature  scope-and-dispatch.feature  suspend-resume.feature  telemetry-and-validation.feature
crates/ralph-e2e/src/: hooks_bdd.rs  lib.rs  main.rs  reporter.rs
crates/ralph-proto/src/: json_rpc.rs  lib.rs
crates/ralph-tui/: Cargo.toml
crates/ralph-tui/src/: app.rs  lib.rs  rpc_bridge.rs  rpc_client.rs  rpc_source.rs  rpc_writer.rs  state.rs  state_mutations.rs  text_renderer.rs  update_check.rs
crates/ralph-tui/src/widgets/: content.rs  header.rs
docs/: installation.md
docs/06-analysis/: hooks-mutation-baseline-2026-03-01.md
docs/advanced/: parallel-loops.md  testing.md
docs/api/: ralph-cli.md  rest-api.md
docs/concepts/: backpressure.md
docs/contributing/: setup.md  style.md
docs/examples/: index.md  pdd-design.md  spec-driven.md
docs/examples/presets/: auto-pdd.yml
docs/getting-started/: first-task.md  index.md  installation.md  quick-start.md
docs/guide/: cli-reference.md  configuration.md  index.md  presets.md
docs/reference/: migration-v1.md  troubleshooting.md
docs/specs/: context-window-utilization.md
examples/hooks/scripts/: env-guard.sh  notify.sh
frontend/ralph-web/: package.json  vite.config.js  vite.config.ts
frontend/ralph-web/src/: main.tsx  trpc.ts
frontend/ralph-web/src/components/: LogViewer.tsx  TaskList.tsx
frontend/ralph-web/src/components/plan/: PlanLanding.tsx  (+1 more)
frontend/ralph-web/src/hooks/: useTaskWebSocket.ts
frontend/ralph-web/src/pages/: BuilderPage.tsx  SettingsPage.tsx
frontend/ralph-web/src/rpc/: client.ts
frontend/ralph-web/src/stores/: logStore.ts
presets/: README.md  code-assist.yml
scripts/: hooks-bdd-gate.sh  setup-hooks.sh  test_issue_213.sh
tools/: evaluate-all-presets.sh  evaluate-preset.sh  test-tui.sh
upstream-PRs/: default-publishes-completion-requested-body.md  default-publishes-completion-requested.md  default-publishes-seen-topics-body.md  default-publishes-seen-topics.md  hat-scope-enforcement-body.md  hat-scope-enforcement.md
(+1 files in other folders)
