[workspace]
resolver = "2"
members = [
    "crates/ralph-proto",
    "crates/ralph-core",
    "crates/ralph-adapters",
    "crates/ralph-tui",
    "crates/ralph-cli",
    "crates/ralph-bench",
    "crates/ralph-e2e",
    "crates/ralph-telegram",
    "crates/ralph-api",
]
exclude = [
    ".eval-sandbox",  # Evaluation sandbox - should never be in workspace
    ".e2e-tests",     # E2E test workspaces are ephemeral
]

[workspace.package]
edition = "2024"
version = "2.5.1"
license = "MIT"
repository = "https://github.com/mikeyobrien/ralph-orchestrator"
homepage = "https://github.com/mikeyobrien/ralph-orchestrator"
description = "Ralph Orchestrator - Multi-agent orchestration framework"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Allow common patterns that clippy::pedantic complains about
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
similar_names = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
uninlined_format_args = "allow"
return_self_not_must_use = "allow"
too_many_lines = "allow"
redundant_closure_for_method_calls = "allow"
redundant_closure = "allow"
range_plus_one = "allow"
assigning_clones = "allow"
unused_self = "allow"
format_push_string = "allow"
needless_pass_by_value = "allow"
collapsible_match = "allow"
io_other_error = "allow"
manual_let_else = "allow"
single_match_else = "allow"
match_same_arms = "allow"
unnecessary_wraps = "allow"
type_complexity = "allow"
ignored_unit_patterns = "allow"
semicolon_if_nothing_returned = "allow"
map_unwrap_or = "allow"
redundant_else = "allow"
too_many_arguments = "allow"
unnecessary_debug_formatting = "allow"
items_after_statements = "allow"
wildcard_imports = "allow"
bind_instead_of_map = "allow"
manual_pattern_char_comparison = "allow"
used_underscore_binding = "allow"
field_reassign_with_default = "allow"
struct_excessive_bools = "allow"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# TUI (pinned for rustc 1.87.0 compatibility)
ratatui = "0.30"
crossterm = { version = "0.28", features = ["event-stream"] }

# Async stream utilities
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# CLI parsing
clap = { version = "4", features = ["derive", "std", "cargo"] }
clap_complete = "4"

# Regex for text processing
regex = "1"

# HTTP client for remote presets
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# OS keychain for secure credential storage
keyring = { version = "3", features = ["apple-native", "linux-native"] }

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time/date
chrono = { version = "0.4", features = ["serde"] }

# Testing
tempfile = "3"

# Terminal markdown rendering
termimad = "0.31"

# Terminal colors
colored = "3"

# Progress indicators
indicatif = "0.17"

# Open URLs in default browser
open = "5"

# PTY support
portable-pty = "0.9"
nix = { version = "0.29", features = ["signal", "term", "fs"] }
vt100 = "0.15"
scopeguard = "1"
strip-ansi-escapes = "0.2"

# Internal crates (version required for crates.io publishing)
ralph-proto = { version = "2.5.1", path = "crates/ralph-proto" }
ralph-core = { version = "2.5.1", path = "crates/ralph-core", features = ["recording"] }
ralph-adapters = { version = "2.5.1", path = "crates/ralph-adapters" }
ralph-tui = { version = "2.5.1", path = "crates/ralph-tui" }
ralph-cli = { version = "2.5.1", path = "crates/ralph-cli" }
ralph-bench = { version = "2.5.1", path = "crates/ralph-bench" }
ralph-e2e = { version = "2.5.1", path = "crates/ralph-e2e" }
ralph-telegram = { version = "2.5.1", path = "crates/ralph-telegram" }
ralph-api = { version = "2.5.1", path = "crates/ralph-api" }

# Telegram bot framework
teloxide = { version = "0.13", default-features = false, features = ["macros", "rustls", "ctrlc_handler"] }

# Config for 'dist'
[workspace.metadata.dist]
# CI backends to support
ci = "github"
# Target platforms to build apps for (Rust target-triple syntax)
# Windows excluded: Ralph requires Unix PTY and signal handling
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu"]
# The installers to generate for each app
installers = ["shell", "npm"]
# npm package scope (creates @ralph-orchestrator/ralph)
npm-scope = "@ralph-orchestrator"
# Publish jobs to run in CI
publish-jobs = ["npm"]
# Extra static files to include in each App (path relative to this Cargo.toml's dir)
include = ["README.md", "LICENSE"]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.30.3"
# Allow custom modifications to CI workflow (we add publish-crates job)
allow-dirty = ["ci"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false

# Use GitHub hosted runners for builds
# aarch64-linux uses cross-compilation from x86_64 runner
[workspace.metadata.dist.github-custom-runners]
aarch64-unknown-linux-gnu = "ubuntu-latest"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
