[package]
name = "ralph-adapters"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Agent adapters for Ralph Orchestrator (Claude, Kiro, Gemini, ACP)"

[lints]
workspace = true

[dependencies]
ralph-proto.workspace = true
ralph-core.workspace = true

tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tempfile.workspace = true

# Terminal markdown rendering (used for both TUI and non-TUI modes for parity)
termimad.workspace = true

# ANSI escape code parsing (converts ANSI to ratatui Text)
ansi-to-tui = "8"

# TUI (for TuiStreamHandler)
ratatui.workspace = true

# PTY support
portable-pty.workspace = true
nix.workspace = true
crossterm.workspace = true
vt100.workspace = true
strip-ansi-escapes.workspace = true
agent-client-protocol = "0.9.4"
futures.workspace = true
tokio-util.workspace = true
