[package]
name = "ralph-api"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Rust-native RPC v1 control-plane API runtime for Ralph"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
axum = { version = "0.8", features = ["ws", "macros", "json"] }
chrono.workspace = true
futures.workspace = true
jsonschema = "0.18"
ralph-core.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid = { version = "1.21.0", features = ["v4"] }

[dev-dependencies]
reqwest.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio-tungstenite = "0.24"
