[package]
name = "ralph-orchestrator-lucent"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Command-line interface for Ralph Orchestrator"
repository.workspace = true
homepage.workspace = true

# Mark this crate for distribution by cargo-dist
[package.metadata.dist]
dist = true

[lints]
workspace = true

[[bin]]
name = "ralph"
path = "src/main.rs"

[dependencies]
ralph-proto.workspace = true
ralph-core.workspace = true
ralph-adapters.workspace = true
ralph-telegram.workspace = true
ralph-tui.workspace = true
ralph-api.workspace = true

tokio.workspace = true
clap.workspace = true
clap_complete.workspace = true
anyhow.workspace = true
reqwest.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
regex.workspace = true
keyring.workspace = true

# For raw mode handling in PTY mode
crossterm.workspace = true
scopeguard.workspace = true

# For TUI stream handler line types
ratatui.workspace = true

# For progress spinners
indicatif.workspace = true

# For opening URLs in the default browser
open.workspace = true

# For Unix process group and signal handling
[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[dev-dependencies]
tempfile.workspace = true

[[example]]
name = "calculator"
path = "examples/calculator.rs"

[[example]]
name = "greeter"
path = "examples/greeter.rs"
