[package]
name = "ralph-tui"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Terminal UI for Ralph Orchestrator using ratatui"

[lints]
workspace = true

[dependencies]
ralph-core.workspace = true
ralph-proto.workspace = true

tokio.workspace = true
ratatui.workspace = true
crossterm.workspace = true
futures.workspace = true
anyhow.workspace = true
tracing.workspace = true
scopeguard.workspace = true
unicode-width = "0.2"
chrono.workspace = true
serde_json.workspace = true
serde.workspace = true
reqwest.workspace = true
tokio-tungstenite.workspace = true
tungstenite.workspace = true
url = "2"
termimad.workspace = true
ansi-to-tui = "8"

[dev-dependencies]
insta = { version = "1.40", features = ["yaml", "filters"] }
serde = { version = "1.0", features = ["derive"] }
serde_json.workspace = true
tempfile.workspace = true
